--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
               
           </div>
         </div>
-        <div class="header__hide">
+        <!-- <div class="header__hide">
           <span class="header__hide-author">Hoang Phuc</span>
-        </div>
+        </div> -->
       </nav>
     </header>
 <!-- Intro -->
