[@phuchealer91]:fire: update heading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <title>ProFile</title>
   </head>
   <body>
+    <h1>Cuộc sống mà</h1>
+    <h2>Anh em ơi</h2>
     <h1>hello</h1>
    <div class="wrapper">
     <header class="header">
