[@phuchealer91]:fire: remove heading old

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <title>ProFile</title>
   </head>
   <body>
-    <h1>Cuộc sống mà</h1>
-    <h2>Anh em ơi</h2>
-    <h1>hello</h1>
+<h6>Tôi không tin</h6>
    <div class="wrapper">
     <header class="header">
       <nav class="navbar navbar-expand-sm navbar-white bg-white fixed-top ">
