--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>ProFile</title>
   </head>
   <body>
-    <footer>hello footer</footer>
+    <footer>hello footer 2</footer>
 <h6>Tôi không tin</h6>
    <div class="wrapper">
     <header class="header">
